--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'sonia.project'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.3.0'
 
     repositories {
         mavenCentral()
@@ -30,6 +30,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    compile "org.jetbrains.kotlin:kotlin-script-runtime:$kotlin_version"
 }
 
 wrapper {
